RESOLVED FIXED223417
[iOS] Web process sometimes crashes under WebPage::positionInformation() after r274031
https://bugs.webkit.org/show_bug.cgi?id=223417
Summary [iOS] Web process sometimes crashes under WebPage::positionInformation() afte...
Wenson Hsieh
Reported 2021-03-17 23:03:32 PDT
Attachments
Patch (1.74 KB, patch)
2021-03-17 23:07 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-03-17 23:07:13 PDT
Devin Rousso
Comment 2 2021-03-17 23:10:43 PDT
Comment on attachment 423562 [details] Patch rs=me
EWS
Comment 3 2021-03-18 00:21:20 PDT
Committed r274618: <https://commits.webkit.org/r274618> All reviewed patches have been landed. Closing bug and clearing flags on attachment 423562 [details].
Note You need to log in before you can comment on or make changes to this bug.