[iOS] Web process sometimes crashes under WebPage::positionInformation() after r274031 https://bugs.webkit.org/show_bug.cgi?id=223417 <rdar://problem/75540178>

Reviewed by Devin Rousso.

Add a null check to guard against the case where the hit-tested node is null, but the element responding to
click events exists.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::elementPositionInformation):


Canonical link: https://commits.webkit.org/235455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274618 268f45cc-cd09-0410-ab3c-d52691b4dbfc